// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App-view generic tests When app is open 1`] = `
<div
  className="iNCLPV"
>
  <div
    className="cqcsJm"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm1 5a1 1 0 00-1 1 1 1 0 001 1h18a1 1 0 001-1 1 1 0 00-1-1H3z"
      />
    </svg>
  </div>
  <div
    className="cqhevY"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="coMxPB jMBFJg"
  >
    <div
      className="FfRgh"
    >
      <div
        className="bRVVhm"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="fJNzGa"
      >
        <div
          className="eovPXo"
        >
          <input
            autoComplete="off"
            className="ihhDHR"
            placeholder="Search component name"
            type="search"
            value=""
          />
          <div
            className="hziPJU"
          >
            <div
              className="cVLcqX"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="gafCDm"
    >
      <nav
        className="jAwBMs"
      >
        <div
          className="jeVtJA"
        >
          <div
            className="kKPASM"
          >
            <div
              className="eYViuw"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="hndwzQ"
            >
              <div
                className="SJgek"
              >
                <a
                  className="gxaoIF"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="jeVtJA"
        >
          <div
            className="kKPASM"
          >
            <div
              className="eYViuw"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="hndwzQ"
            >
              <div
                className="SJgek"
              >
                <a
                  className="gxaoIF"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="jWjGLm"
  >
    <article
      className="duUsAr"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="gCwHZU"
        >
          Welcome!
        </h1>
        <div
          className="laODzD"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App-view generic tests When component is open 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c12 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c39 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 16px;
  height: 16px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c39 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c9 {
  position: relative;
  color: #ccc;
  font-family: sans-serif;
}

.c9:focus-within {
  color: #000;
}

.c10 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding-left: calc(24px + 12px);
  border: 1px solid #ccc;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  background-size: cover;
}

.c10:focus {
  border-color: #000;
}

.c10::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10::-webkit-search-cancel-button {
  height: 24px;
  width: 24px;
  position: absolute;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path d="M15 2.41L13.59 1 8 6.59 2.41 1 1 2.41 6.59 8 1 13.59 2.41 15 8 9.41 13.59 15 15 13.59 9.41 8z" fill="currentColor" /></svg>');
  background-size: 12px 12px;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c11 {
  position: absolute;
  top: 50%;
  left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c16 {
  display: block;
}

.c17 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18 {
  padding: 16px;
}

.c21 {
  padding: 16px;
  display: none;
}

.c19 {
  padding: 8px 16px;
}

.c20 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7000e3;
  font-weight: 600;
}

.c22 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

.c14 {
  position: relative;
  max-height: 100vh;
  font-family: sans-serif;
}

.c15 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c33 {
  display: block;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background: #f0f0f0;
  border-radius: 4px 4px 0 0;
  color: #000;
  padding: 0 16px;
}

.styleguide-sandbox .c34:only-child {
  border-radius: 4px;
}

.c36 {
  margin: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-size: 16px;
  font-weight: 300;
  font-family: sans-serif;
  padding: 16px 0;
  word-break: break-word;
}

.c37 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #202020;
  opacity: 0.5;
  -webkit-transition: opacity 0.1s ease;
  transition: opacity 0.1s ease;
  padding: 0 8px;
}

.c38:hover {
  opacity: 1;
}

.c40 {
  position: relative;
  padding: 20px;
  border: 1px solid #f0f0f0;
  border-top: 0;
  box-shadow: 0 -1px 0 0 #f0f0f0;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c28 {
  padding-top: 32px;
}

.c29 {
  margin: 0 16px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c30 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c31 {
  margin-top: 16px;
}

.c32 + .c32 {
  margin-top: 32px;
}

.c25 {
  padding: 0;
}

.c24 + .c24 {
  margin-top: 32px;
}

.c26 {
  max-width: 960px;
  min-width: 320px;
  margin: auto;
}

.c27 + .c27 {
  margin-top: 40px;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 16px 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c13 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c8 {
  width: 100%;
  padding: 0 16px;
}

.c7 {
  width: 32px;
  height: 32px;
  margin-bottom: 8px;
}

.c1 {
  position: fixed;
  z-index: 3;
  cursor: pointer;
  width: 24px;
  height: 24px;
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  top: 16px;
  left: 16px;
  -webkit-transform: translate3d(-50px,0px,0px);
  -ms-transform: translate3d(-50px,0px,0px);
  transform: translate3d(-50px,0px,0px);
}

.c1 svg {
  pointer-events: none;
  fill: currentColor;
}

.c2 {
  position: fixed;
  z-index: 3;
  cursor: pointer;
  width: 24px;
  height: 24px;
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  top: 16px;
  left: 16px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

.c2 svg {
  pointer-events: none;
  fill: currentColor;
}

.c5 {
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  transition: transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  z-index: 1;
  will-change: transform;
}

.c23 {
  padding: 32px 0;
  min-width: 0;
  position: absolute;
  background: #fff;
  right: 0;
  left: 0;
  height: 100vh;
  -webkit-transition: left 0.3s cubic-bezier(0.165,0.84,0.44,1);
  transition: left 0.3s cubic-bezier(0.165,0.84,0.44,1);
  will-change: left;
}

.c0 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .c4 {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

@media screen and (max-width:376px) {
  .c36 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    overflow: hidden;
    text-overflow: ellipsis;
    word-break: initial;
  }
}

@media screen and (max-width:376px) {
  .c28 {
    padding-top: 16px;
  }
}

@media screen and (min-width:768px) {
  .c29 {
    margin: 0 0 8px 0;
  }
}

@media screen and (min-width:768px) {
  .c25 {
    padding: 32px;
  }
}

@media screen and (max-width:376px) {
  .c26 {
    min-width: auto;
  }
}

@media screen and (min-width:1440px) {
  .c26 {
    max-width: 1440px;
  }
}

@media screen and (max-width:376px) {
  .c2 {
    right: 16px;
    left: initial;
  }
}

@media (min-width:768px) {
  .c23 {
    padding: 0 32px;
    left: 300px;
  }
}

@media screen and (max-width:376px) {
  .c0 .c4 {
    right: 0;
    width: auto;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm1 5a1 1 0 00-1 1 1 1 0 001 1h18a1 1 0 001-1 1 1 0 00-1-1H3z"
      />
    </svg>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="c3 c4 c5"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <input
            autoComplete="off"
            className="c10"
            placeholder="Search component name"
            type="search"
            value=""
          />
          <div
            className="c11"
          >
            <div
              className="c12"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c13"
    >
      <nav
        className="c14"
      >
        <div
          className="c15"
        >
          <div
            className="c16"
          >
            <div
              className="c17"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c18"
            >
              <div
                className="c19"
              >
                <a
                  className="c20"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c15"
        >
          <div
            className="c16"
          >
            <div
              className="c17"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="c21"
            >
              <div
                className="c19"
              >
                <a
                  className="c22"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c23"
  >
    <section
      className="c24 c25"
    >
      <div
        className="c26"
      >
        <div
          className="c27 "
        >
          <article
            className="c28"
            data-id="component"
          >
            <header
              className="styleguide-component__header"
            >
              <h1
                className="c29"
              >
                Component
              </h1>
              <div
                className="c30"
              >
                
              </div>
            </header>
            <div
              className="c31"
            >
              <div
                className="c32 "
              >
                <section
                  className="c33"
                  data-name="SpecComponentEmpty"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c34 c35"
                  >
                    <h1
                      className="c36"
                      onClick={[Function]}
                      title="SpecComponentEmpty"
                    >
                      SpecComponentEmpty
                    </h1>
                    <div
                      className="c37"
                    >
                      <span
                        className="c38"
                        onClick={[Function]}
                      >
                        <div
                          className="c39"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c38"
                        onClick={[Function]}
                      >
                        <div
                          className="c39"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c40"
                    >
                      <article
                        className="c28"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c29"
                          />
                          <div
                            className="c30"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c32 "
              >
                <section
                  className="c33"
                  data-name="SpecComponentPropTypes"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c34 c35"
                  >
                    <h1
                      className="c36"
                      onClick={[Function]}
                      title="SpecComponentPropTypes"
                    >
                      SpecComponentPropTypes
                    </h1>
                    <div
                      className="c37"
                    >
                      <span
                        className="c38"
                        onClick={[Function]}
                      >
                        <div
                          className="c39"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c38"
                        onClick={[Function]}
                      >
                        <div
                          className="c39"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c40"
                    >
                      <article
                        className="c28"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c29"
                          />
                          <div
                            className="c30"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c32 "
              >
                <section
                  className="c33"
                  data-name="SpecComponentFull"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c34 c35"
                  >
                    <h1
                      className="c36"
                      onClick={[Function]}
                      title="SpecComponentFull"
                    >
                      SpecComponentFull
                    </h1>
                    <div
                      className="c37"
                    >
                      <span
                        className="c38"
                        onClick={[Function]}
                      >
                        <div
                          className="c39"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c38"
                        onClick={[Function]}
                      >
                        <div
                          className="c39"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c40"
                    >
                      <article
                        className="c28"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c29"
                          />
                          <div
                            className="c30"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`App-view generic tests When filter doesn\`t show components 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c12 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c9 {
  position: relative;
  color: #ccc;
  font-family: sans-serif;
}

.c9:focus-within {
  color: #000;
}

.c10 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding-left: calc(24px + 12px);
  border: 1px solid #ccc;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  background-size: cover;
}

.c10:focus {
  border-color: #000;
}

.c10::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10::-webkit-search-cancel-button {
  height: 24px;
  width: 24px;
  position: absolute;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path d="M15 2.41L13.59 1 8 6.59 2.41 1 1 2.41 6.59 8 1 13.59 2.41 15 8 9.41 13.59 15 15 13.59 9.41 8z" fill="currentColor" /></svg>');
  background-size: 12px 12px;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c11 {
  position: absolute;
  top: 50%;
  left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c14 {
  position: relative;
  max-height: 100vh;
  font-family: sans-serif;
}

.c16 {
  padding-top: 32px;
}

.c17 {
  margin: 0 16px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c18 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 16px 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c13 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c8 {
  width: 100%;
  padding: 0 16px;
}

.c7 {
  width: 32px;
  height: 32px;
  margin-bottom: 8px;
}

.c1 {
  position: fixed;
  z-index: 3;
  cursor: pointer;
  width: 24px;
  height: 24px;
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  top: 16px;
  left: 16px;
  -webkit-transform: translate3d(-50px,0px,0px);
  -ms-transform: translate3d(-50px,0px,0px);
  transform: translate3d(-50px,0px,0px);
}

.c1 svg {
  pointer-events: none;
  fill: currentColor;
}

.c2 {
  position: fixed;
  z-index: 3;
  cursor: pointer;
  width: 24px;
  height: 24px;
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  top: 16px;
  left: 16px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

.c2 svg {
  pointer-events: none;
  fill: currentColor;
}

.c5 {
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  transition: transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  z-index: 1;
  will-change: transform;
}

.c15 {
  padding: 32px 0;
  min-width: 0;
  position: absolute;
  background: #fff;
  right: 0;
  left: 0;
  height: 100vh;
  -webkit-transition: left 0.3s cubic-bezier(0.165,0.84,0.44,1);
  transition: left 0.3s cubic-bezier(0.165,0.84,0.44,1);
  will-change: left;
}

.c0 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .c4 {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

@media screen and (max-width:376px) {
  .c16 {
    padding-top: 16px;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    margin: 0 0 8px 0;
  }
}

@media screen and (max-width:376px) {
  .c2 {
    right: 16px;
    left: initial;
  }
}

@media (min-width:768px) {
  .c15 {
    padding: 0 32px;
    left: 300px;
  }
}

@media screen and (max-width:376px) {
  .c0 .c4 {
    right: 0;
    width: auto;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm1 5a1 1 0 00-1 1 1 1 0 001 1h18a1 1 0 001-1 1 1 0 00-1-1H3z"
      />
    </svg>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="c3 c4 c5"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <input
            autoComplete="off"
            className="c10"
            placeholder="Search component name"
            type="search"
            value="g"
          />
          <div
            className="c11"
          >
            <div
              className="c12"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c13"
    >
      <nav
        className="c14"
      />
    </div>
  </aside>
  <main
    className="c15"
  >
    <article
      className="c16"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="c17"
        >
          Welcome!
        </h1>
        <div
          className="c18"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App-view generic tests When filter show components 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c12 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 16px;
  height: 16px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c37 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c9 {
  position: relative;
  color: #ccc;
  font-family: sans-serif;
}

.c9:focus-within {
  color: #000;
}

.c10 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding-left: calc(24px + 12px);
  border: 1px solid #ccc;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  background-size: cover;
}

.c10:focus {
  border-color: #000;
}

.c10::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10::-webkit-search-cancel-button {
  height: 24px;
  width: 24px;
  position: absolute;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path d="M15 2.41L13.59 1 8 6.59 2.41 1 1 2.41 6.59 8 1 13.59 2.41 15 8 9.41 13.59 15 15 13.59 9.41 8z" fill="currentColor" /></svg>');
  background-size: 12px 12px;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c11 {
  position: absolute;
  top: 50%;
  left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c16 {
  display: block;
}

.c17 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18 {
  padding: 16px;
}

.c19 {
  padding: 8px 16px;
}

.c20 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7000e3;
  font-weight: 600;
}

.c14 {
  position: relative;
  max-height: 100vh;
  font-family: sans-serif;
}

.c15 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c31 {
  display: block;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background: #f0f0f0;
  border-radius: 4px 4px 0 0;
  color: #000;
  padding: 0 16px;
}

.styleguide-sandbox .c32:only-child {
  border-radius: 4px;
}

.c34 {
  margin: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-size: 16px;
  font-weight: 300;
  font-family: sans-serif;
  padding: 16px 0;
  word-break: break-word;
}

.c35 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #202020;
  opacity: 0.5;
  -webkit-transition: opacity 0.1s ease;
  transition: opacity 0.1s ease;
  padding: 0 8px;
}

.c36:hover {
  opacity: 1;
}

.c38 {
  position: relative;
  padding: 20px;
  border: 1px solid #f0f0f0;
  border-top: 0;
  box-shadow: 0 -1px 0 0 #f0f0f0;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c26 {
  padding-top: 32px;
}

.c27 {
  margin: 0 16px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c28 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c29 {
  margin-top: 16px;
}

.c30 + .c30 {
  margin-top: 32px;
}

.c23 {
  padding: 0;
}

.c22 + .c22 {
  margin-top: 32px;
}

.c24 {
  max-width: 960px;
  min-width: 320px;
  margin: auto;
}

.c25 + .c25 {
  margin-top: 40px;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 16px 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c13 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c8 {
  width: 100%;
  padding: 0 16px;
}

.c7 {
  width: 32px;
  height: 32px;
  margin-bottom: 8px;
}

.c1 {
  position: fixed;
  z-index: 3;
  cursor: pointer;
  width: 24px;
  height: 24px;
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  top: 16px;
  left: 16px;
  -webkit-transform: translate3d(-50px,0px,0px);
  -ms-transform: translate3d(-50px,0px,0px);
  transform: translate3d(-50px,0px,0px);
}

.c1 svg {
  pointer-events: none;
  fill: currentColor;
}

.c2 {
  position: fixed;
  z-index: 3;
  cursor: pointer;
  width: 24px;
  height: 24px;
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  top: 16px;
  left: 16px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

.c2 svg {
  pointer-events: none;
  fill: currentColor;
}

.c5 {
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  transition: transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  z-index: 1;
  will-change: transform;
}

.c21 {
  padding: 32px 0;
  min-width: 0;
  position: absolute;
  background: #fff;
  right: 0;
  left: 0;
  height: 100vh;
  -webkit-transition: left 0.3s cubic-bezier(0.165,0.84,0.44,1);
  transition: left 0.3s cubic-bezier(0.165,0.84,0.44,1);
  will-change: left;
}

.c0 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .c4 {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

@media screen and (max-width:376px) {
  .c34 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    overflow: hidden;
    text-overflow: ellipsis;
    word-break: initial;
  }
}

@media screen and (max-width:376px) {
  .c26 {
    padding-top: 16px;
  }
}

@media screen and (min-width:768px) {
  .c27 {
    margin: 0 0 8px 0;
  }
}

@media screen and (min-width:768px) {
  .c23 {
    padding: 32px;
  }
}

@media screen and (max-width:376px) {
  .c24 {
    min-width: auto;
  }
}

@media screen and (min-width:1440px) {
  .c24 {
    max-width: 1440px;
  }
}

@media screen and (max-width:376px) {
  .c2 {
    right: 16px;
    left: initial;
  }
}

@media (min-width:768px) {
  .c21 {
    padding: 0 32px;
    left: 300px;
  }
}

@media screen and (max-width:376px) {
  .c0 .c4 {
    right: 0;
    width: auto;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm1 5a1 1 0 00-1 1 1 1 0 001 1h18a1 1 0 001-1 1 1 0 00-1-1H3z"
      />
    </svg>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="c3 c4 c5"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <input
            autoComplete="off"
            className="c10"
            placeholder="Search component name"
            type="search"
            value="c"
          />
          <div
            className="c11"
          >
            <div
              className="c12"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c13"
    >
      <nav
        className="c14"
      >
        <div
          className="c15"
        >
          <div
            className="c16"
          >
            <div
              className="c17"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c18"
            >
              <div
                className="c19"
              >
                <a
                  className="c20"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c21"
  >
    <section
      className="c22 c23"
    >
      <div
        className="c24"
      >
        <div
          className="c25 "
        >
          <article
            className="c26"
            data-id="component"
          >
            <header
              className="styleguide-component__header"
            >
              <h1
                className="c27"
              >
                Component
              </h1>
              <div
                className="c28"
              >
                
              </div>
            </header>
            <div
              className="c29"
            >
              <div
                className="c30 "
              >
                <section
                  className="c31"
                  data-name="SpecComponentEmpty"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c32 c33"
                  >
                    <h1
                      className="c34"
                      onClick={[Function]}
                      title="SpecComponentEmpty"
                    >
                      SpecComponentEmpty
                    </h1>
                    <div
                      className="c35"
                    >
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c38"
                    >
                      <article
                        className="c26"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c27"
                          />
                          <div
                            className="c28"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c30 "
              >
                <section
                  className="c31"
                  data-name="SpecComponentPropTypes"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c32 c33"
                  >
                    <h1
                      className="c34"
                      onClick={[Function]}
                      title="SpecComponentPropTypes"
                    >
                      SpecComponentPropTypes
                    </h1>
                    <div
                      className="c35"
                    >
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c38"
                    >
                      <article
                        className="c26"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c27"
                          />
                          <div
                            className="c28"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c30 "
              >
                <section
                  className="c31"
                  data-name="SpecComponentFull"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c32 c33"
                  >
                    <h1
                      className="c34"
                      onClick={[Function]}
                      title="SpecComponentFull"
                    >
                      SpecComponentFull
                    </h1>
                    <div
                      className="c35"
                    >
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c36"
                        onClick={[Function]}
                      >
                        <div
                          className="c37"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c38"
                    >
                      <article
                        className="c26"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c27"
                          />
                          <div
                            className="c28"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`App-view generic tests When we open component from app 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c12 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c9 {
  position: relative;
  color: #ccc;
  font-family: sans-serif;
}

.c9:focus-within {
  color: #000;
}

.c10 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding-left: calc(24px + 12px);
  border: 1px solid #ccc;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  background-size: cover;
}

.c10:focus {
  border-color: #000;
}

.c10::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c10::-webkit-search-cancel-button {
  height: 24px;
  width: 24px;
  position: absolute;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><path d="M15 2.41L13.59 1 8 6.59 2.41 1 1 2.41 6.59 8 1 13.59 2.41 15 8 9.41 13.59 15 15 13.59 9.41 8z" fill="currentColor" /></svg>');
  background-size: 12px 12px;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c11 {
  position: absolute;
  top: 50%;
  left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c16 {
  display: block;
}

.c17 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18 {
  padding: 16px;
  display: none;
}

.c19 {
  padding: 8px 16px;
}

.c20 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

.c14 {
  position: relative;
  max-height: 100vh;
  font-family: sans-serif;
}

.c15 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c22 {
  padding-top: 32px;
}

.c23 {
  margin: 0 16px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c24 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 16px 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c13 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c8 {
  width: 100%;
  padding: 0 16px;
}

.c7 {
  width: 32px;
  height: 32px;
  margin-bottom: 8px;
}

.c1 {
  position: fixed;
  z-index: 3;
  cursor: pointer;
  width: 24px;
  height: 24px;
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  top: 16px;
  left: 16px;
  -webkit-transform: translate3d(-50px,0px,0px);
  -ms-transform: translate3d(-50px,0px,0px);
  transform: translate3d(-50px,0px,0px);
}

.c1 svg {
  pointer-events: none;
  fill: currentColor;
}

.c2 {
  position: fixed;
  z-index: 3;
  cursor: pointer;
  width: 24px;
  height: 24px;
  -webkit-transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  transition: all 0.2s cubic-bezier(0.34,1.56,0.64,1);
  top: 16px;
  left: 16px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

.c2 svg {
  pointer-events: none;
  fill: currentColor;
}

.c5 {
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  -webkit-transition: transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  transition: transform 0.2s cubic-bezier(0.165,0.84,0.44,1);
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  z-index: 1;
  will-change: transform;
}

.c21 {
  padding: 32px 0;
  min-width: 0;
  position: absolute;
  background: #fff;
  right: 0;
  left: 0;
  height: 100vh;
  -webkit-transition: left 0.3s cubic-bezier(0.165,0.84,0.44,1);
  transition: left 0.3s cubic-bezier(0.165,0.84,0.44,1);
  will-change: left;
}

.c0 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .c4 {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

@media screen and (max-width:376px) {
  .c22 {
    padding-top: 16px;
  }
}

@media screen and (min-width:768px) {
  .c23 {
    margin: 0 0 8px 0;
  }
}

@media screen and (max-width:376px) {
  .c2 {
    right: 16px;
    left: initial;
  }
}

@media (min-width:768px) {
  .c21 {
    padding: 0 32px;
    left: 300px;
  }
}

@media screen and (max-width:376px) {
  .c0 .c4 {
    right: 0;
    width: auto;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm1 5a1 1 0 00-1 1 1 1 0 001 1h18a1 1 0 001-1 1 1 0 00-1-1H3z"
      />
    </svg>
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="c3 c4 c5"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <input
            autoComplete="off"
            className="c10"
            placeholder="Search component name"
            type="search"
            value=""
          />
          <div
            className="c11"
          >
            <div
              className="c12"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c13"
    >
      <nav
        className="c14"
      >
        <div
          className="c15"
        >
          <div
            className="c16"
          >
            <div
              className="c17"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c18"
            >
              <div
                className="c19"
              >
                <a
                  className="c20"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c15"
        >
          <div
            className="c16"
          >
            <div
              className="c17"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="c18"
            >
              <div
                className="c19"
              >
                <a
                  className="c20"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c21"
  >
    <article
      className="c22"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="c23"
        >
          Welcome!
        </h1>
        <div
          className="c24"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;
